--- a/docker/open-webui/docker-compose.yml
+++ b/docker/open-webui/docker-compose.yml
@@ -12,6 +12,8 @@ services:
   open-webui:
     image: ghcr.io/open-webui/open-webui:main
     container_name: open-webui
+    extra_hosts:
+      - "host.docker.internal:host-gateway"    
     volumes:
       - open-webui:/app/backend/data
     environment:
