--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ terraform/terraform.tfvars.json
 terraform/set-tf-output-2-env-var.bat
 launcher.bat
 lambda/controller/package
+lambda/function.zip
