--- a/docker/open-webui/docker-compose.yml
+++ b/docker/open-webui/docker-compose.yml
@@ -1,4 +1,9 @@
 
+# Expected env vars:
+#    LITELLM_API_KEY
+#    BEDROCK_GATEWAY_API_KEY
+#    JUPYTER_LAB_TOKEN
+
 services:
   ollama:
     image: ollama/ollama
@@ -8,6 +13,8 @@ services:
     environment:
       - OLLAMA_DEBUG=1
     restart: always
+    networks:
+      - shared_network
 
   open-webui:
     image: ghcr.io/open-webui/open-webui:main
@@ -17,9 +24,12 @@ services:
     volumes:
       - open-webui:/app/backend/data
     environment:
-      - OPENAI_API_BASE_URL=http://litellm:8105
+      - OPENAI_API_BASE_URLS=http://litellm;http://bedrock-gateway/api/v1
+      # - OPENAI_API_BASE_URLS=http://litellm:8105;http://host.docker.internal:8106/api/v1
+      # - OPENAI_API_BASE_URL=http://litellm:8105
       # See ec2-setup\user-data.sh for how LITELLM_API_KEY is created
-      - OPENAI_API_KEY=$LITELLM_API_KEY
+      - OPENAI_API_KEYS=${LITELLM_API_KEY};${BEDROCK_GATEWAY_API_KEY}
+      # - OPENAI_API_KEY=$LITELLM_API_KEY
       - GLOBAL_LOG_LEVEL="DEBUG"     
       - OLLAMA_BASE_URL=http://ollama:11434 
       - ENV=dev
@@ -27,10 +37,12 @@ services:
       - CODE_EXECUTION_JUPYTER_URL=http://host.docker.internal:8103
       - CODE_EXECUTION_JUPYTER_AUTH=token
       # See ec2-setup\user-data.sh for how JUPYTER_LAB_TOKEN is created
-      - CODE_EXECUTION_JUPYTER_AUTH_TOKEN=$JUPYTER_LAB_TOKEN
+      - CODE_EXECUTION_JUPYTER_AUTH_TOKEN=${JUPYTER_LAB_TOKEN}
     ports:
       - "8101:8080"
     restart: always
+    networks:
+      - shared_network
 
   litellm:
     image: ghcr.io/berriai/litellm:main-latest
@@ -38,14 +50,19 @@ services:
     volumes:
       - ./litellm-config.yml:/app/config.yaml
     ports:
-      - "8105:8105"
+      - "8105:80"
     environment:
       # See ec2-setup\user-data.sh for how LITELLM_API_KEY is created
-      - LITELLM_API_KEY=$LITELLM_API_KEY
+      - LITELLM_API_KEY=${LITELLM_API_KEY}
       - AWS_REGION=us-east-1
-      - PORT=8105
+      - PORT=80
     command: --config /app/config.yaml --detailed_debug
+    networks:
+      - shared_network
 
+networks:
+  shared_network:
+    external: true
 volumes:
   ollama:
   open-webui:
