--- a/docker/open-webui/litellm-config.yml
+++ b/docker/open-webui/litellm-config.yml
@@ -2,9 +2,9 @@ model_list:
   - model_name: Claude 3 Haiku By Anthropic (Served via LiteLLM)
     litellm_params:
       model: anthropic.claude-3-haiku-20240307-v1:0
-  # - model_name: Nova Canvas By Amazon (Served via LiteLLM)
-  #   litellm_params:
-  #     model: bedrock/amazon.nova-canvas-v1:0
+  - model_name: amazon.nova-pro-v1:0 (Served via LiteLLM)
+    litellm_params:
+      model: bedrock/amazon.nova-pro-v1:0
 
 litellm_settings:
   modify_params: True
