--- a/gpu-ec2/docker/open-webui/litellm-config.yml
+++ b/gpu-ec2/docker/open-webui/litellm-config.yml
@@ -7,7 +7,7 @@ model_list:
       model: bedrock/amazon.nova-pro-v1:0
   - model_name: Claude 3.7 Sonnet By Anthropic (Served via LiteLLM)
     litellm_params:
-      model: anthropic.claude-3-7-sonnet-20250219-v1:0
+      model: us.anthropic.claude-3-7-sonnet-20250219-v1:0
   
 
 litellm_settings:
