--- a/docker/open-webui/litellm-config.yml
+++ b/docker/open-webui/litellm-config.yml
@@ -8,7 +8,12 @@ model_list:
   - model_name: US Claude 3.7 Sonnet By Anthropic (Served via LiteLLM)
     litellm_params:
       model: us.anthropic.claude-3-7-sonnet-20250219-v1:0
-  
+  - model_name: Claude Sonnet 4 LiteLLM
+    litellm_params:
+      model: us.anthropic.claude-sonnet-4-20250514-v1:0
+  - model_name: Claude Opus 4.1 LiteLLM
+    litellm_params:
+      model: us.anthropic.claude-opus-4-1-20250805-v1:0  
 
 litellm_settings:
   modify_params: True
