--- a/docker/openhands/docker-compose.yml
+++ b/docker/openhands/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   openhands-app:
-    image: docker.all-hands.dev/all-hands-ai/openhands:0.50
+    image: docker.all-hands.dev/all-hands-ai/openhands:latest
     container_name: openhands-app
     pull_policy: always
     stdin_open: true  # equivalent to -i
