--- a/docker/openhands/docker-compose.yml
+++ b/docker/openhands/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   openhands-app:
-    image: docker.all-hands.dev/all-hands-ai/openhands:latest
+    image: docker.openhands.dev/openhands/openhands:0.60
     container_name: openhands-app
     pull_policy: always
     stdin_open: true  # equivalent to -i
     tty: true  # equivalent to -t
     environment:
-      - SANDBOX_RUNTIME_CONTAINER_IMAGE=docker.all-hands.dev/all-hands-ai/runtime:0.50-nikolaik
+      - SANDBOX_RUNTIME_CONTAINER_IMAGE=docker.openhands.dev/openhands/runtime:0.60-nikolaik
       - LOG_ALL_EVENTS=true
       # - SANDBOX_VSCODE_PORT=7152
       # - APP_PORT_RANGE_1,
